Fix z-index issues

--- a/app/assets/stylesheets/main/feed.css
+++ b/app/assets/stylesheets/main/feed.css
@@ -24,7 +24,6 @@
   margin-top: 5px;
   width: 22px;
   height: 22px;
-  box-shadow: 0 0 3px 1px grey;
 }
 
 .feed-profile-link {
