--- a/app/assets/stylesheets/main/main.css.scss
+++ b/app/assets/stylesheets/main/main.css.scss
@@ -1,5 +1,5 @@
 body {
-  background: #E9EAED;
+  background-color: #E9EAED;
 }
 
 .nav-bar-full {
